# DOpenglTest

./: .gitignore  README.md  build.gradle  settings.gradle
appgl/: build.gradle
appgl/src/main/: AndroidManifest.xml
appgl/src/main/res/drawable/: common_progress_bg.xml
appgl/src/main/res/layout/: activity_ball.xml  activity_basic_sample.xml  activity_camera.xml  activity_camera3d.xml  activity_camera_draw.xml  activity_cubic_axis.xml  activity_instance_sample.xml  activity_main.xml  activity_media_player.xml  activity_media_player_cam.xml  activity_native_main.xml  activity_open_c_v.xml  activity_record_camera.xml
appgl/src/main/res/raw/: advanced_opengl_cube_maps_vertex.glsl  cam3d_cubic_intancing_vertext.glsl  fragment_ball_world_map_shade.glsl  fragment_base_shader.glsl  fragment_base_texture_shade.glsl  fragment_camera_quarter_draw_shade.glsl  fragment_camera_quarter_mirror_shade.glsl  fragment_camera_shade.glsl  fragment_camera_transparent_shade.glsl  fragment_common_camera_shade.glsl  fragment_cubic_particle_vertex.glsl  fragment_edge_shader.glsl  fragment_fountain.glsl  fragment_geometry_billboard_shader.glsl  fragment_media_player_negative_shade.glsl  fragment_media_player_nostalgia_shade.glsl  fragment_mrt_display_shader.glsl  fragment_mrt_es30_render_shader.glsl  fragment_mrt_render_shader.glsl  fragment_point_light_shade.glsl  fragment_point_wave_texture_shader.glsl  fragment_soul_shader.glsl  fragment_transform_feedback_shader.glsl  fragment_wave_texture_shader.glsl  geometry_line_billboard_shader.glsl  (+26 more)
face-detection/: AndroidManifest.xml  build.gradle
face-detection/jni/: Android.mk
gradle/wrapper/: gradle-wrapper.properties
nativelibrary/: build.gradle
nativelibrary/src/main/: AndroidManifest.xml
nativelibrary/src/main/cpp/: CMakeLists.txt  native-lib.cpp
nativelibrary/src/main/cpp/api/: DNativeRenderContext.cpp  DNativeRenderContext.h
nativelibrary/src/main/cpp/render/: RectangleRender.cpp  RectangleRender.h  TriangleRender.cpp  TriangleRender.h
nativelibrary/src/main/cpp/render/base/: GLBaseRender.cpp  GLBaseRender.h
nativelibrary/src/main/cpp/util/: GLUtils.cpp  GLUtils.h
(+130 files in other folders)
